Add insta link to footer; update About page; uselessly change home page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Kev</h1>
+  <h1>Projects</h1>
 
-  <blockquote>Sophomore CS major at the University of Pittsburgh.</blockquote>
+  <ul>
+    <li>?</li>
+  </ul>
 
 </div>
