--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <h1>Projects</h1>
 
   <ul>
-    <li>?</li>
+    <li><a href="{{ site.baseurl }}{% link _pages/Three/README.md %}">OcuPhysics</a></li>
   </ul>
 
 </div>
