make images folder; add visual page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ layout: default
   <h1>Projects</h1>
 
   <ul>
-    <li><a href="{{ site.baseurl }}{% link _pages/Three/README.md %}">OcuPhysics</a></li>
+    <li><a href="{{ site.baseurl }}/ocuphysics/">OcuPhysics</a></li>
+    <li><a href="{{ site.baseurl }}/visual/">General artsiness</a></li>
   </ul>
 
 </div>
