questionable style choices

--- a/_pages/vis/index.html
+++ b/_pages/vis/index.html
@@ -4,4 +4,4 @@ permalink: /visual/
 ---
 
 <img src="{{ site.baseurl }}/images/flowers.jpg">
-<img src="{{ site.baseurl }}/images/calligraphy.jpg">
+<!-- <img src="{{ site.baseurl }}/images/calligraphy.jpg"> -->
