make the hobby page prettier, reorganize pages and links

--- a/_pages/vis/index.html
+++ b/_pages/vis/index.html
@@ -3,5 +3,25 @@ layout: page
 permalink: /visual/
 ---
 
-<img src="{{ site.baseurl }}/images/flowers.jpg">
-<!-- <img src="{{ site.baseurl }}/images/calligraphy.jpg"> -->
+<h1>Miscellaneous stuff I've made.</h1>
+
+<div class="grid-row">
+	<div class="grid-column" id="primary">
+		<img src="{{ site.baseurl }}/images/flowers.jpg">
+		<iframe src="https://www.youtube.com/embed/uWkk0Lr7qhc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<img src="{{ site.baseurl }}/images/couscous.jpeg">
+	</div>
+	<div class="grid-column">
+		<img src="{{ site.baseurl }}/images/breakfast.jpeg">
+		<img src="{{ site.baseurl }}/images/sabre.png">
+		<img src="{{ site.baseurl }}/images/tetrahedron.jpeg">
+	</div>
+	<div class="grid-column">
+		<img src="{{ site.baseurl }}/images/pizza.jpeg">
+		<img src="{{ site.baseurl }}/images/cactus star.jpeg">
+		<img src="{{ site.baseurl }}/images/tortellini 1.jpeg">
+		<img src="{{ site.baseurl }}/images/tortellini 2.jpeg">
+	</div>
+</div>
+
+<!-- width="560" height="315" -->
