--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@ layout: default
 
   <h1>Projects</h1>
 
-  <ul>
-    <li><a href="{{ site.baseurl }}/ocuphysics/">OcuPhysics</a></li>
-    <li><a href="{{ site.baseurl }}/visual/">General artsiness</a></li>
-  </ul>
+  <h2>Nothing to see here for now! Click on one of the links up top.</h2>
 
 </div>
