--- a/_pages/projects/index.html
+++ b/_pages/projects/index.html
@@ -7,9 +7,9 @@ permalink: /projects/
 
 <h2>OcuPhysics</h2>
 
-<p>Summary text, text that summarizes</p>
+<p>3D visualization of electric fields around charged objects.</p>
 
-<img src="{{ site.baseurl }}/images/flower.png">
+<img src="{{ site.baseurl }}/_pages/Three/pics/oculus.png">
 
 <p>You can read more and look at a demo <a href="{{ site.baseurl }}/ocuphysics/">here</a>.</p>
 
@@ -18,6 +18,6 @@ permalink: /projects/
 
 <p>Summary text, but different! Still text that summarizes.</p>
 
-<imp src="{{ site.baseurl }}/images/flower.png">
+<img src="{{ site.baseurl }}/images/flower.png">
 
 <p>You can play it <a href="{{ site.baseurl }}/ocuphysics/">here</a>. Note: this link doesn't go anywhere yet.</p>
