--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home">
 
-  <h1>Projects</h1>
-
   <h2>Nothing to see here for now! Click on one of the links up top.</h2>
+
+  <img src="{{ site.baseurl }}/images/flower.png">
 
 </div>
